<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.ujmp</groupId>
	<artifactId>ujmp</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Universal Java Matrix Package</name>
	<url>https://ujmp.org/</url>
	<description>The Universal Java Matrix Package (UJMP) is an open source Java library which provides sparse and dense matrix classes, as well as a large number of calculations for linear algebra such as matrix multiplication or matrix inverse. Operations such as mean, correlation, standard deviation, replacement of missing values or the calculation of mutual information are supported, too. The Universal Java Matrix Package provides various visualization methods, import and export filters for a large number of file formats, and even the possibility to link to JDBC databases. Multi-dimensional matrices as well as generic matrices with a specified object type are supported and very large matrices can be handled even when they do not fit into memory.</description>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<developers>
		<developer>
			<id>arndt</id>
			<name>Holger Arndt</name>
			<email>mail@holger-arndt.com</email>
			<url>https://holger-arndt.com/</url>
			<roles>
				<role>administrator</role>
			</roles>
		</developer>
	</developers>

	<organization>
		<name>Universal Java Matrix Package</name>
		<url>https://ujmp.org/</url>
	</organization>

	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0</url>
		</license>
	</licenses>

	<scm>
		<url>https://svn.code.sf.net/p/ujmp/code</url>
		<connection>scm:svn:https://svn.code.sf.net/p/ujmp/code/trunk/</connection>
		<developerConnection>scm:svn:https://svn.code.sf.net/p/ujmp/code/trunk/</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>../ujmp-core</module>
		<module>../ujmp-gui</module>
		<module>../ujmp-colt</module>
		<module>../ujmp-commonsmath</module>
		<module>../ujmp-complete</module>
		<module>../ujmp-ehcache</module>
		<module>../ujmp-ejml</module>
		<module>../ujmp-elasticsearch</module>
		<module>../ujmp-examples</module>
		<module>../ujmp-hadoop</module>
		<module>../ujmp-itext</module>
		<module>../ujmp-jackcess</module>
		<module>../ujmp-jama</module>
		<module>../ujmp-jblas</module>
		<module>../ujmp-jdbc</module>
		<module>../ujmp-jetty</module>
		<module>../ujmp-jfreechart</module>
		<module>../ujmp-jmatio</module>
		<module>../ujmp-jsch</module>
		<module>../ujmp-jsci</module>
		<module>../ujmp-jscience</module>
		<module>../ujmp-jung</module>
		<module>../ujmp-la4j</module>
		<module>../ujmp-lucene</module>
		<module>../ujmp-mail</module>
		<module>../ujmp-mtj</module>
		<module>../ujmp-ojalgo</module>
		<module>../ujmp-parallelcolt</module>
		<module>../ujmp-pdfbox</module>
		<module>../ujmp-poi</module>
		<module>../ujmp-vecmath</module>
	</modules>

	<profiles>
		<profile>
			<id>ossrh</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<distributionManagement>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>sourceforge</id>
			<distributionManagement>
				<snapshotRepository>
					<id>sourceforge</id>
					<name>SourceForge</name>
					<url>sftp://holger-arndt,ujmp@frs.sourceforge.net:/home/frs/project/u/uj/ujmp/snapshots</url>
				</snapshotRepository>
				<repository>
					<id>sourceforge</id>
					<name>SourceForge</name>
					<url>sftp://holger-arndt,ujmp@frs.sourceforge.net:/home/frs/project/u/uj/ujmp/releases</url>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>

	<build>
		<resources>
			<resource>
				<targetPath>META-INF</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/META-INF</directory>
				<includes>
					<include>**</include>
				</includes>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.4.2</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
				</configuration>
			</plugin>

			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<failOnError>false</failOnError>
					<noindex>true</noindex>
					<notree>true</notree>
					<skip>true</skip>
					<additionalJOptions>
						<additionalJOption>-J-Xss512M</additionalJOption>
						<additionalJOption>-J-XX:MaxPermSize=512M</additionalJOption>
					</additionalJOptions>
					<maxmemory>1G</maxmemory>
					<header><![CDATA[
						<script async
							src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
						<ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px"
							data-ad-client="ca-pub-1238159289842092" data-ad-slot="8359296562"></ins>
						<script>
							(adsbygoogle = window.adsbygoogle || []).push({});
						</script>
					]]></header>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.ujmp.core.UJMP</mainClass>
							<packageName>org.ujmp</packageName>
						</manifest>
						<manifestEntries>
							<mode>development</mode>
							<url>${project.url}</url>
						</manifestEntries>
					</archive>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<outputDirectory>${basedir}/target/classes</outputDirectory>
					<includeEmptyDirs>true</includeEmptyDirs>
					<resources>
						<resource>
							<directory>${basedir}/src/main/resources</directory>
							<filtering>false</filtering>
						</resource>
					</resources>
					<manifestEntries>
						<SCM-Revision>${buildNumber}</SCM-Revision>
						<Project-Version>${project.version}</Project-Version>
						<Build-Date>${maven.build.timestamp}</Build-Date>
						<Project-Name>${project.artifactId}-${project.version}</Project-Name>
					</manifestEntries>
					<descriptors>
						<descriptor>src/assemble/complete.xml</descriptor>
						<descriptor>src/assemble/sources.xml</descriptor>
						<descriptor>src/assemble/with-deps.xml</descriptor>
						<descriptor>src/assemble/deps.xml</descriptor>
						<descriptor>src/assemble/libs.xml</descriptor>
					</descriptors>
					<archive>
						<manifest>
							<mainClass>org.ujmp.gui.UJMP</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>